# JARVIS-AcquisitionTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure_usb_settings.sh  doxygen-conf  globals.hpp  main.cpp  setup.bat  setup.sh
IconThemes/DarkIconTheme/: resize.py
cudajpegencoder/: CMakeLists.txt  cudajpegencoder.cu  cudajpegencoder.hpp  exception.h  helper_cuda.h  helper_nvJPEG.hpp  helper_string.h  helper_timer.h
deployment/: change_rpath_note.txt  deploy_Ubuntu_1804.sh  deploy_Ubuntu_2004.sh  deploy_Ubuntu_2204.sh
deployment/deb_packages/JARVIS-AcquisitionTool_0.3-1_amd64_1804/DEBIAN/: control
deployment/deb_packages/JARVIS-AcquisitionTool_0.3-1_amd64_2004/DEBIAN/: control
deployment/deb_packages/JARVIS-AcquisitionTool_1.0-1_amd64_1804/DEBIAN/: control
deployment/deb_packages/JARVIS-AcquisitionTool_1.1-1_amd64_2204/DEBIAN/: control
deployment/deb_packages/JARVIS-AcquisitionTool_1.2-1_amd64_2004/DEBIAN/: control
deployment/deb_packages/JARVIS-AcquisitionTool_1.2-1_amd64_2204/DEBIAN/: control
docs/: configure_spinnaker.sh  configure_usbfs.sh
gui/: CMakeLists.txt  hardwarecheck.cpp  hardwarecheck.hpp  helpwindow.cpp  helpwindow.hpp  imageviewer.cpp  imageviewer.hpp  labelwithtooltip.cpp  labelwithtooltip.hpp  loadflirpresetswindow.cpp  loadflirpresetswindow.hpp  mainbar.cpp  mainbar.hpp  mainwindow.cpp  mainwindow.hpp  presetswindow.cpp  presetswindow.hpp  savecamerapresetsinterface.hpp  saveflirpresetswindow.cpp  saveflirpresetswindow.hpp  settingswindow.cpp  settingswindow.hpp  streamingpanel.cpp  streamingpanel.hpp  toggleswitch.cpp  toggleswitch.hpp
gui/Qt-DarkStyle/: DarkStyle.cpp  DarkStyle.hpp
gui/Qt-DarkStyle/darkstyle/: darkstyle.qss
gui/acquisitionMode/: CMakeLists.txt  acquisitionmode.cpp  acquisitionmode.hpp  acquistionmode.hpp  camerasettingswindow.cpp  camerasettingswindow.hpp  camselectorwindow.cpp  camselectorwindow.hpp  controlbar.cpp  controlbar.hpp  latencychartview.cpp  latencychartview.hpp  loadcamerapresetsinterface.hpp  loadflirpresetswindow.cpp  loadflirpresetswindow.hpp  monitoringwindow.cpp  monitoringwindow.hpp  savecamerapresetsinterface.hpp  saveflirpresetswindow.cpp  saveflirpresetswindow.hpp  setupallcameraswindow.cpp  setupallcameraswindow.hpp  streamingwidget.cpp  streamingwidget.hpp  timestampwindow.cpp  timestampwindow.hpp  triggersettingswindow.cpp  triggersettingswindow.hpp
gui/calibrationMode/: CMakeLists.txt  calibrationcommons.hpp  calibrationcontrolbar.cpp  calibrationcontrolbar.hpp  calibrationmode.cpp  calibrationmode.hpp  calibrationsettingswindow.cpp  calibrationsettingswindow.hpp  calibrationstatisticswindow.cpp  calibrationstatisticswindow.hpp  calibrationtool.cpp  calibrationtool.hpp  calibrationwidget.cpp  calibrationwidget.hpp  coveragemapwindow.cpp  coveragemapwindow.hpp
gui/connectionMode/: CMakeLists.txt  arduinotriggerconfig.cpp  arduinotriggerconfig.hpp  camconfiginterface.hpp  camconnectionpanel.cpp  camconnectionpanel.hpp  camtestconfig.cpp  camtestconfig.hpp  connectionmode.cpp  connectionmode.hpp  connectionwidget.cpp  connectionwidget.hpp  flirchameleonconfig.cpp  flirchameleonconfig.hpp  panelgridwidget.hpp  statuslogwindow.cpp  statuslogwindow.hpp  triggerconfiginterface.hpp  triggerconnectionpanel.cpp  triggerconnectionpanel.hpp  triggertestconfig.cpp  triggertestconfig.hpp
help/: acquisitionmode.html  cameraconfig.html  connectionmode.html  introduction.html  setup.html
libs/FlirSpinnaker/Ubuntu_1804/include/: CameraDefs.h  CameraPtr.h  ChunkDataInference.h  DeviceRemovalEventHandler.h  EventHandler.h  Exception.h  Image.h  ImageEventHandler.h  ImageUtilityHeatmap.h  Interface.h  InterfaceArrivalEventHandler.h  InterfaceRemovalEventHandler.h  LoggingEventDataPtr.h  System.h  SystemEventHandler.h  TransportLayerDefs.h  TransportLayerInterface.h  TransportLayerStream.h  TransportLayerSystem.h
libs/FlirSpinnaker/Ubuntu_1804/lib/: libSpinnaker.so.2
libs/FlirSpinnaker/Ubuntu_2004/include/: AVIRecorder.h  BasePtr.h  Camera.h  CameraBase.h  CameraList.h  ChunkData.h  DeviceArrivalEventHandler.h  DeviceEventHandler.h  ImagePtr.h  ImageStatistics.h  ImageUtility.h  ImageUtilityPolarization.h  InterfaceEventHandler.h  InterfaceList.h  InterfacePtr.h  LoggingEventData.h  LoggingEventHandler.h  Spinnaker.h  SpinnakerDefs.h  SpinnakerPlatform.h  SystemPtr.h  TransportLayerDevice.h
libs/OpenCV_4.5.1/Ubuntu_1804/lib/: libopencv_calib3d.so.4.5.0  libopencv_features2d.so.4.5.0  libopencv_flann.so.4.5.0  libopencv_imgcodecs.so.4.5.0  libopencv_videoio.so.4.5.0
libs/Qt_5.15.2/Ubuntu_2004/lib/: Qt5RepParser.la  libQt5AccessibilitySupport.la  libQt5Bootstrap.la  libQt5Charts.la  libQt5Concurrent.la  libQt5Core.la  libQt5DBus.la  libQt5DeviceDiscoverySupport.la  libQt5EdidSupport.la  libQt5EventDispatcherSupport.la  libQt5FbSupport.la  libQt5FontDatabaseSupport.la  libQt5Gui.la  libQt5InputSupport.la  libQt5KmsSupport.la  libQt5LinuxAccessibilitySupport.la  libQt5Multimedia.la  libQt5MultimediaGstTools.la  libQt5MultimediaWidgets.la  libQt5Network.la  libQt5PrintSupport.la  libQt5RemoteObjects.la  libQt5SerialPort.la  libQt5SerialPort.prl  libQt5ServiceSupport.la  libQt5Sql.la  libQt5Svg.la  libQt5Test.la  libQt5ThemeSupport.la  libQt5Widgets.la  libQt5X11Extras.la  libQt5XcbQpa.la  libQt5XkbCommonSupport.la  (+1 more)
libs/cmake_modules/: FindLibUSB.cmake
nsis/: installer_script.nsi
src/: CMakeLists.txt  arduinoconfigbackend.cpp  arduinoconfigbackend.hpp  arduinoserialmessages.hpp  arduinoserialpeer.cpp  arduinoserialpeer.hpp  arduinotrigger.cpp  arduinotrigger.hpp  baserecorder.cpp  baserecorder.hpp  calibrationbackend.cpp  calibrationbackend.hpp  camerainterface.hpp  cobs.hpp  csvdatawriter.hpp  cudarecorder.cpp  cudarecorder.hpp  flirchameleon.cpp  flirchameleon.hpp  flirconfigbackend.cpp  flirconfigbackend.hpp  metadatawriter.cpp  metadatawriter.hpp  recordinginterface.hpp  serialinterface.cpp  serialinterface.hpp  settingsnode.cpp  settingsnode.hpp  settingsobject.cpp  settingsobject.hpp  testcamera.cpp  testcamera.hpp  testtrigger.cpp  testtrigger.hpp  triggerinterface.hpp
(+163 files in other folders)
