add_library(acquisitionMode
    acquisitionmode.hpp
    acquisitionmode.cpp
    camselectorwindow.hpp
    camselectorwindow.cpp
    controlbar.hpp
    controlbar.cpp
    streamingwidget.hpp
    streamingwidget.cpp
    camerasettingswindow.hpp
    camerasettingswindow.cpp
    triggersettingswindow.hpp
    triggersettingswindow.cpp
    savecamerapresetsinterface.hpp
    loadcamerapresetsinterface.hpp
    saveflirpresetswindow.hpp
    saveflirpresetswindow.cpp
    loadflirpresetswindow.hpp
    loadflirpresetswindow.cpp
    monitoringwindow.hpp
    monitoringwindow.cpp
    latencychartview.hpp
    latencychartview.cpp
    setupallcameraswindow.hpp
    setupallcameraswindow.cpp
)

target_include_directories(acquisitionMode
    PUBLIC
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/src
    ../
)

target_link_libraries(acquisitionMode
  Qt5::Widgets
  Qt5::Charts
  src
  gui
)
